--- a/Plantain.html
+++ b/Plantain.html
@@ -36,7 +36,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock"> Can take care of itself. </p>
 
@@ -57,7 +57,7 @@
           <h2> Harvest </h2>
 
           <p class="textblock"> Harvest leaves in summer for dyes or skin salves. <br>
-        <i> Experiment in cordage and break apart a leaf, pull out the inner fibres, twist, twist, twist. </i> </p>        </div>
+        <i> Experiment in cordage and break apart a leaf. Pull out the inner fibres. <span><i>Twist, twist, twist.</i> </span></i> </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -70,8 +70,8 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Leaves can be made into a skin salve, dye or expermental cordage.
-            <br> Seeds can be collected as food.</p>        </div>
+          <p class="textblock"> Leaves can be made into a skin salve, dye or experimental cordage.
+            <br> Seeds can be collected as food. They make a good egg replacement in baking.</p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -83,16 +83,16 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Plantago%20major&redblue=Both&lifeform=7" style="text-decoration: underline;"> Hyperlink to information on identifying common plantain. </a> </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Plantago%20major&redblue=Both&lifeform=7" style="text-decoration: underline;"> How to identify common plantain. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Europe and Asia. </p>        </div>
 <!-- End of orgins -->
@@ -114,12 +114,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Plantain: plantago lanceolata/ribleaf plantain and plantago major/broadleaf plantain/white mans footprint) </h1>
+          <h1> Ribleaf plantain &nbsp; <i>Plantago lanceolata</i> &nbsp; and broadleaf plantain or white man's footprint &nbsp; <i>Plantago major</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
