--- a/Quince.html
+++ b/Quince.html
@@ -39,13 +39,13 @@
         <h2> Care & Maitnence </h2>
 
         <p class="textblock">
-        Febuary, March, April, August, September, October:
+        February, March, April, August, September, October:
         <br>
-        prune and mulch.
+        Prune and mulch.
         <br><br>
         November, December, January:
         <br>
-        need be tree removal
+        Need-be tree removal
         <br><br>
         <i> Repeat </i>
          </p>
@@ -68,7 +68,7 @@
 
           <p class="textblock">
             October, November: <br>
-            harvest ripe quince. A quince will look akin to a pear but feel more like an apple. </p>        </div>
+            Harvest ripe quince. A quince will look akin to a pear but feel more like an apple. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -81,7 +81,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Quince fruit used in cooking and jellies--not eaten raw. </p>        </div>
+          <p class="textblock"> Quince fruit is used in cooking and jellies. The fruit is a bit hard to eat raw. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -98,13 +98,13 @@
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Dry, arid places from South Eastern Europe to Western Asia. </p>        </div>
+          <p class="textblock"> Dry, arid climates from South Eastern Europe to Western Asia. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -124,12 +124,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Quince (Cydonia oblonga)</h1>
+          <h1> Quince &nbsp; <i>Cydonia oblonga</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
