--- a/Spruce tree.html
+++ b/Spruce tree.html
@@ -36,11 +36,11 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
   Low-maintenance.<br>
-  Woodchip circumference of tree in fall or spring.
+  Woodchip circumference of tree in autumn or spring.
 <br>  </p>
 
 
@@ -59,7 +59,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Mid spring harvest tips <br>
+          <p class="textblock"> In mid-spring, harvest spruce tips <br>
                                 for food and medicine. </p>        </div>
 
 <!-- End of harvest info  -->
@@ -74,7 +74,7 @@
           <h2> Uses </h2>
 
           <p class="textblock">
-                                Spruce sap has traditional medicinal uses as does the young tips that in spring give vitamin C.
+                                Spruce sap has traditional medicinal uses as do the young tips which in spring are packed with vitamin C. Spruce tips are often used in indigenous cooking and offer a bright lemony flavour to a dish.
                                </p>        </div>
 <!-- End of uses info -->
 <br>
@@ -92,11 +92,11 @@
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> </p>        </div>
 <!-- End of orgins -->
@@ -110,7 +110,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about sprucd trees with earthandmapping(at)gmail.com </p>        </div>
+          <p class="textblock"> Share your stories about spruce trees with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -118,12 +118,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Spruce Tree </h1>
+          <h1> Spruce Tree &nbsp; <i>Picea</i></h1> 
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
