--- a/St.john's wort.html
+++ b/St.john's wort.html
@@ -36,15 +36,15 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maitenance </h2>
 
 <p class="textblock">
-Self seeding,
+Self-seeding,
 <br>
-low maintnece,
+Low maintenance.
    | <br>
 |<br>
-Remove climbing bind weed <br>
+Remove any climbing bindweeds. <br>
 | <br>
 | <br>
 P< br>
@@ -69,7 +69,7 @@ P< br>
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> St. John’s wort begins flowering around Summer Solstice. <br> Harvest blooms and seeds regularly there after throughout the summer. <br> At the end of the season the entire plant is usable for dyeing.</p>    </div>
+          <p class="textblock"> St. John’s wort begins flowering around the summer solstice. <br> Harvest blooms and seeds regularly thereafter throughout the summer. <br> At the end of the season, the entire plant is usable for dyeing.</p>    </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -82,7 +82,7 @@ P< br>
 
           <h2> Uses </h2>
 
-          <p class="textblock"> The flowers can be used for natual dyes and for medicinal purposes. St. John’s wort creates yellow/ red and green dyes depending on mordanting. <br> Used traditionally  as a tea for depression. </p>        </div>
+          <p class="textblock"> The flowers can be used for natual dyes and for medicinal purposes. St. John’s wort creates yellow, red and green dyes depending on mordanting. <br> Used traditionally as a tea for depression. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -99,13 +99,13 @@ P< br>
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Eurasia and North Africa. <br> On the invasive species list for interior of BC and other places in part because it is toxic to livestock. **Take caution in planting and check your region for if appropriate.** </p>        </div>
+          <p class="textblock"> Eurasia and North Africa. <br> On the invasive species list for interior of British-Columbia and other places in part because it is toxic to livestock. **Take caution in planting and check your region if appropriate.** </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -117,7 +117,7 @@ P< br>
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories of st. john's wort with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories of St. John's wort with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -125,12 +125,12 @@ P< br>
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> St. John's Wort (Hypericum perforatum) </h1>
+          <h1> St. John's Wort &nbsp; <i>Hypericum perforatum</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
