--- a/Weld.html
+++ b/Weld.html
@@ -36,7 +36,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock"> info on the care and maintnece of weld. </p>
 
@@ -112,12 +112,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Weld (Reseda luteola) </h1>
+          <h1> Weld &nbsp; <i>Reseda luteola</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
