--- a/Phorium tanax.html
+++ b/Phorium tanax.html
@@ -36,13 +36,13 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 March, April, May: <br>
 Cut back dead leaves <br>
-(save for use) <br>
-mulch base of plants.
+(save for use). <br>
+Mulch base of plants.
  </p>
 
 
@@ -96,16 +96,16 @@ and baskets.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://www.nzpcn.org.nz/flora/species/phormium-tenax/" style="text-decoration: underline;"> Hyperlink to information on identifying a paulownia tree. </a> </p>        </div>
+          <p class="textblock"> <a href="https://www.nzpcn.org.nz/flora/species/phormium-tenax/" style="text-decoration: underline;"> How to identify a New Zealand flax. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons"  onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons"  onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> New Zealand </p>        </div>
 <!-- End of orgins -->
@@ -119,7 +119,7 @@ and baskets.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about Phorium tenax with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories about Phormium tenax with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -127,12 +127,12 @@ and baskets.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Phormium tenax, Harakeke, New Zealand Flax </h1>
+          <h1> New Zealand Flax or Harakeke &nbsp; <i>Phormium tenax</i>  </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
