--- a/Poke weed.html
+++ b/Poke weed.html
@@ -36,13 +36,13 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-Low maintnece <br>
-toxic plant,<br>
-take care<br>
-handel with <br>
+Low maintenance. <br>
+⚠ Toxic plant ⚠<br>
+Take care!<br>
+Handle with <br>
 caution.
  <br>
  </p>
@@ -76,7 +76,7 @@ caution.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> *berry* *very* *very* *toxic* use only for dye/pigment. Creates soft to mute pinks.  </p>        </div>
+          <p class="textblock"> ☠ *berry* *very* *very* *toxic* ☠ Use only for dye/pigment of soft muted pinks.  </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -93,11 +93,11 @@ caution.
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> North America </p>        </div>
 <!-- End of orgins -->
@@ -111,7 +111,7 @@ caution.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about poke weed with earthandmapping(at)gmail.com </p>        </div>
+          <p class="textblock"> Share your stories about pokeweed with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -119,12 +119,12 @@ caution.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Poke weed (Phytolacca americana)</h1>
+          <h1> Pokeweed &nbsp; <i>Phytolacca americana</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
