--- a/Yellow willow.html
+++ b/Yellow willow.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/Green-willow2.jpg); height: 1500px;
+<body ID="frame_test" style="background-image:url(images/Yellow-willow2.jpg); height: 1500px;
 ;">
   <div ID="info">
       <div class="righthandline">
@@ -37,7 +37,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maintenance </h2>
+<h2> Care & Maitnence </h2>
 
 <p class="textblock"> info on the care and maintnece of weld. </p>
 
@@ -87,11 +87,11 @@
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Origins<p> </button>
+        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Origins </h2>
+          <h2> Orgins </h2>
 
           <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
 <!-- End of orgins -->
@@ -113,12 +113,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Green willow tree &nbsp; <i>Salix babylonica</i> </h1>
+          <h1> Green Willow </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
