bby fixed her button problem☺️

--- a/Golden hops.html
+++ b/Golden hops.html
@@ -135,9 +135,8 @@ Long strands from pruning can be used in basketry.
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
-
+<button class="letsgo"> <a onclick="letsgo()" href="#" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+<button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
     </div>
 
 <br>
