--- a/Plum tree.html
+++ b/Plum tree.html
@@ -36,16 +36,16 @@
 
         <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-        <h2> Care & Maintenance </h2>
+        <h2> Care & Maitnence </h2>
 
         <p class="textblock">
         Febuary, March, April, August, September, October:
         <br>
-        Prune and mulch.
+        prune and mulch.
         <br><br>
         November, December, January:
         <br>
-        When the need comes, fell that tree down.
+        need be tree removal
         <br><br>
         <i> Repeat </i>
          </p>
@@ -68,15 +68,15 @@
           <p class="textblock">  </p>
 February, March, April:
 <br>
-It needs to be green wood to carve
+need be greenwood for carving
 <br><br>
 May, June, July:
 <br>
-Cherry plums are ripe and right for the community.
+cherries for the community
 <br><br>
-August, September, October:
+Augaust, September, October:
 <br>
-Keep leaves and stalks for dyes and pigments.
+Need be leave and stalks for dyes and pigments.
       </div>
 
 <!-- End of harvest info  -->
@@ -90,7 +90,7 @@ Keep leaves and stalks for dyes and pigments.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Come autumn, leaves and branches can be uses for dyes; Come spring, the green wood can be used for carving projects; And, come summer, the fruit can be harvested for food. </p>        </div>
+          <p class="textblock"> Come fall, leaves and branches can be uses for dyes; Come Spring, the greenwood can be used for carving projects; And, come summer, the fruit can be harvested for food. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -102,16 +102,16 @@ Keep leaves and stalks for dyes and pigments.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Prunus%20cerasifera&redblue=Both&lifeform=2" style="text-decoration: underline;"> How to identify a cherry plum tree. </a>  </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Prunus%20cerasifera&redblue=Both&lifeform=2" style="text-decoration: underline;"> Hyperlink to information on identifying a cherry plum tree. </a>  </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Origins </h2>
+          <h2> Orgins </h2>
 
           <p class="textblock"> Southeastern Europe and Western Asia. </p>        </div>
 <!-- End of orgins -->
@@ -125,7 +125,7 @@ Keep leaves and stalks for dyes and pigments.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about cherry plum trees with earthandmapping(at)gmail.com</p>        </div>
+          <p class="textblock"> Share your stories about plum trees with earthandmapping(at)gmail.com</p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -133,12 +133,12 @@ Keep leaves and stalks for dyes and pigments.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Cherry plum tree &nbsp; <i>Prunus cerasifera</i> </h1>
+          <h1> Cherry plum Tree (Prunus cerasifera) </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
+          <button class="letsgo"> <a onclick="letsgo()" href="#" id="letsgogo"> ~Keep Walking~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
