--- a/Apple tree.html
+++ b/Apple tree.html
@@ -160,8 +160,8 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
               </div>
 
         <!-- EXIT PAGE BUTTONS -->
-                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-                  <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
+                <button class="letsgo"> <a onclick="letsgo()" href="#" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+                <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
             </div>
 
