--- a/Elderberry.html
+++ b/Elderberry.html
@@ -149,9 +149,8 @@ Pruned leaves can be used for dyes.
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
-
+<button class="letsgo"> <a onclick="letsgo()" href="#" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+<button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
     </div>
 
 <br>
