--- a/Rasberry.html
+++ b/Rasberry.html
@@ -120,9 +120,8 @@ They like to spread so transplant when you want some space.
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
-
+<button class="letsgo"> <a onclick="letsgo()" href="#" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+<button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
     </div>
 
 <br>
