--- a/Finder.html
+++ b/Finder.html
@@ -38,7 +38,7 @@
 <h2 class="finderheading"> Dye Plants </h2>
 <a href="Coreopsis.html">  Coreopsis  </a>
 <br>
-<a href="Blood root.html">  Blood Root  </a>
+<a href="Bloodroot.html">  Bloodroot  </a>
 <br>
 <a href="Dandelion.html">  Dandelion  </a>
 <br>
@@ -54,13 +54,15 @@
 <br>
 <a href="Nettle.html">  Nettle  </a>
 <br>
-<a href="Poke weed.html">  Poke weed  </a>
+<a href="Pokeweed.html">  Pokeweed  </a>
 <br>
 <a href="St.john's wort.html">  St. John's Wort  </a>
 <br>
-<a href="Tea bush.html">  Tea Bush  </a>
+<a href="Tea plant.html">  Tea plant  </a>
 <br>
 <a href="Weld.html">  Weld  </a>
+<br>
+<a href="Tansy.html">  Tansy  </a>
 <br>
 <a href="Woad.html">  Woad  </a>
 
@@ -80,7 +82,7 @@
 <br>
 <a href="Dandelion.html">  Dandelion  </a>
 <br>
-<a href="Day lily.html">  Day Lily  </a>
+<a href="Daylily.html">  Daylily  </a>
 <br>
 <a href="Elderberry.html">  Elderberry  </a>
 <br>
@@ -92,7 +94,7 @@
 <br>
 <a href="Nettle.html">  Nettle  </a>
 <br>
-<a href="Phorium tanax.html">  Phormium Tanax  </a>
+<a href="Phormium tenax.html">  Phormium tenax  </a>
 <br>
 <a href="Plantain.html">  Plantain  </a>
 <br>
@@ -134,6 +136,8 @@
 <a href="Spruce tree.html">  Spruce Tree  </a>
 <br>
 <a href="White ash.html">  White Ash Tree  </a>
+<br>
+<a href-"Paulownia tree.html"> Paulownia tree </a>
 
 
 
@@ -159,7 +163,7 @@
 <br>
 <a href="Elderberry.html">  Elderberry  </a>
 <br>
-<a href="Dill weed.html">  Dill Weed  </a>
+<a href="Fennel.html">  Fennel  </a>
 <br>
 <a href="Nootka rose.html">  Nootka Rose  </a>
 <br>
@@ -173,15 +177,13 @@
 <br>
 <a href="Rasberry.html">  Rasberry  </a>
 <br>
-<a href="Spruce.html">  Spruce Tree  </a>
+<a href="Spruce tree.html">  Spruce Tree  </a>
 <br>
 <a href="St.john's wort.html">  St. John's Wort  </a>
 <br>
 <a href="Sunchoke.html">  Sunchoke  </a>
 <br>
-<a href="Tansy.html">  Tansy  </a>
-<br>
-<a href="Tea bush.html">  Tea Bush  </a>
+<a href="Tea plant.html">  Tea plant  </a>
 <br>
 <a href="Yarrow.html">  Yarrow  </a>
 
@@ -194,7 +196,7 @@
   </div>
 
   <button class="gohome" style="top: 500px"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
-  <blockquote class="letsgo"> A finder for all plants in the digtal garden. Click the text to be sent to a plant's page.</blockquote>
+  <blockquote class="letsgo"> A finder for all plants in the digital garden. Click the text to be sent to a plant's page.</blockquote>
 
 
 </body>
