--- a/Sunchoke.html
+++ b/Sunchoke.html
@@ -104,7 +104,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about tansy with earthandmapping(at)gmail.com </p>        </div>
+          <p class="textblock"> Share your stories about sunchoke with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
