--- a/Tea plant.html
+++ b/Tea plant.html
@@ -25,25 +25,28 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/Rasberry2.jpg); height:2000px;">
+<body ID="frame_test" style="background-image:url(images/Tea-bush2.jpg); height: 1200px">
   <div ID="info">
       <div class="righthandline">
 
 <!-- CARE INFO 💌 -->
 
-<button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+        <button class="icons" onclick="care()"><p> Care<p> </button>
         <div id="careinfo" class="infoblock" style="display:none">
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maintenance </h2>
+<h2> Care & Maitnence </h2>
 
-<p class="textblock">
-Prune back old growth in autumn.<br> <br>
-Make a cozy bed of woodchips at the base of each bush in spring.
-<br> <br>
-They like to spread so transplant when you want some space.
- </p>
+<p class="textblock"> <br>
+                    Febauary, March, April: <br>
+                    Mulch, mulch, mulch when needed.
+<br><br>
+                    Autumn: <br>
+                    Prune after blossom. <br>
+                    Mulch as needed.
+              </p>
+
 
         </div>
 
@@ -53,62 +56,72 @@ They like to spread so transplant when you want some space.
 
 <!-- HARVEST INFO 💌 -->
 
-<button class="icons" onclick="showhide('harvestinfo')"><p> Care<p> </button>
+        <button class="icons" onclick="harvest()"><p> Harvest<p> </button>
 
         <div id="harvestinfo" class="infoblock" style="display:none">
           <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+        Early spring: <br>
+        harvest for tea.
+        <br> <br>
+        All year: <br>
+        collect trimmings for their tannins (used in natual dyeing).
+
+        </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
 <!-- USES INFO 💌 -->
 
-<button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
+      <button class="icons" onclick="uses()"><p> Uses<p> </button>
 
         <div id="usesinfo"  class="infoblock" style="display:none">
           <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Berries 4 food <3 </p>        </div>
+          <p class="textblock">
+            Leaves can be made into black tea.<br>
+            Branches and leaves can be used as a tannin in natrual dying. <br>
+           </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-<button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
+        <button class="icons" onclick="idinfo()"><p> ID<p> </button>
 
         <div id="idinfo" class="infoblock" style="display:none">
           <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://blogs.ubc.ca/coastal-plants/plants-of-bc/entry/15/" style="text-decoration:underline;"> Hyperlink to information on identifying rasberry bushes. </p>        </div>
+          <p class="textblock"> <a href="https://plants.ces.ncsu.edu/plants/camellia-sinensis/" style="text-decoration: underline"> How to identify tea plant :). </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Origins<p> </button>
+        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Origins </h2>
+          <h2> Orgins </h2>
 
-          <p class="textblock"> Europe </p>      </div>
+          <p class="textblock"> China. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
 
-<button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
+        <button class="icons" onclick="stories()"><p> Stories<p> </button>
 
         <div id="storiesinfo" class="infoblock" style="display:none">
           <img src="images/stories.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about rasberries with earthandmapping(at)gmail.com </p>        </div>
+          <p class="textblock"> Share your stories of the tea plant with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -116,7 +129,7 @@ They like to spread so transplant when you want some space.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Rasberry &nbsp; <i>Rubus pubescens</i></h1>
+          <h1> Tea plant &nbsp; <i>Camellia sinensis</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
