--- a/Finder.html
+++ b/Finder.html
@@ -39,8 +39,8 @@
 <a href="Coreopsis.html">  Coreopsis  </a>
 <br>
 <a href="Bloodroot.html">  Bloodroot  </a>
-<br>
-<a href="Dandelion.html">  Dandelion  </a>
+<!-- <br>
+<a href="Dandelion.html">  Dandelion  </a> -->
 <br>
 <a href="Elderberry.html">  Elderberry  </a>
 <br>
@@ -79,8 +79,8 @@
 <h2 class="finderheading">Fibre Plants </h2>
 
 <a href="Blackberry (himalayan and thornless).html">  Blackberry (Himalayan and Thornless)  </a>
-<br>
-<a href="Dandelion.html">  Dandelion  </a>
+<!-- <br>
+<a href="Dandelion.html">  Dandelion  </a> -->
 <br>
 <a href="Daylily.html">  Daylily  </a>
 <br>
