--- a/Apple tree.html
+++ b/Apple tree.html
@@ -31,7 +31,7 @@
 
         <!-- CARE INFO 💌 -->
 
-                <button class="icons" onclick="showhide('careinfo')"><p> Care<p> </button>
+                <button class="icons" onclick="showhide('careinfo')"><p> Care</p> </button>
                 <div id="careinfo" class="infoblock" style="display:none">
 
         <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
@@ -39,6 +39,9 @@
         <h2> Care & Maintenance </h2>
 
         <p class="textblock">
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+  <br>
+  <br>
 February, March, April, May:
 <br>
 Prune, mulch, weed and fertilize with compost tea.
@@ -52,7 +55,7 @@ August, September, October:
 <br>
 Trim water shoots, weed some more, prune and serve compost tea.
 <br> <br>
-November, December, January:
+November:
 <br>
 Snip, snip, snip. (Prune)
 <br> <br>
@@ -68,7 +71,7 @@ Snip, snip, snip. (Prune)
 
         <!-- HARVEST INFO 💌 -->
 
-                <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest<p> </button>
+                <button class="icons" onclick="showhide('harvestinfo')"><p> Harvest</p> </button>
 
                 <div id="harvestinfo" class="infoblock" style="display:none">
                   <img src="images/harvest.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
@@ -92,7 +95,7 @@ And, of course, autumn is apple picking.
         <br>
         <!-- USES INFO 💌 -->
 
-              <button class="icons" onclick="showhide('usesinfo')"><p> Uses<p> </button>
+              <button class="icons" onclick="showhide('usesinfo')"><p> Uses</p> </button>
 
                 <div id="usesinfo"  class="infoblock" style="display:none">
                   <img src="images/uses.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
@@ -106,13 +109,13 @@ Green wood from the apple tree carves great.
 The branches and leaves in late summer and early autumn yield tannin-rich natural dyes.
 <br>
 <br>
-Both apple wood and apple dye react very well with iron as a colour depressant.
+Both apple wood and apple dye can be saddened with iron.
  </p>        </div>
         <!-- End of uses info -->
         <br>
         <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-                <button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
+                <button class="icons" onclick="showhide('idinfo')"><p> ID</p> </button>
 
                 <div id="idinfo" class="infoblock" style="display:none">
                   <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
@@ -129,7 +132,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
         <br>
         <!-- ORGINS 💌 -->
 
-                <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
+                <button class="icons" onclick="showhide('orginsinfo')"><p> Origins</p> </button>
                 <div id="orginsinfo" class="infoblock" style="display:none">
                   <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
@@ -140,7 +143,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
         <br>
         <!-- STORIES 💌 -->
 
-                <button class="icons" onclick="showhide('storiesinfo')"><p> Stories<p> </button>
+                <button class="icons" onclick="showhide('storiesinfo')"><p> Stories</p> </button>
 
 
                 <div id="storiesinfo" class="infoblock" style="display:none">
