--- a/Blackberry (himalayan and thornless).html
+++ b/Blackberry (himalayan and thornless).html
@@ -56,7 +56,7 @@
 
                   <h2> Harvest </h2>
 
-                  <p class="textblock"> Himalayan blackberry stalks may be harvested for fibre.
+                  <p class="textblock"> Himalayan blackberry stalks may be harvested for fibre in May and June.
                   <br>
                   Thornless blackberry stalks do not provide fibre, as the Himalayan does. <span><i>Different strokes. Different pokes.</i></span>
                   <br>
