--- a/Finder.html
+++ b/Finder.html
@@ -101,6 +101,8 @@
 <a href="Yellow willow.html">  Yellow Willow  </a>
 <br>
 <a href="Yucca.html">  Yucca  </a>
+<br>
+<a href="Golden hops.html">  Golden Hops  </a>
 
 
 
@@ -138,6 +140,9 @@
 <a href="White ash.html">  White Ash Tree  </a>
 <br>
 <a href-"Paulownia tree.html"> Paulownia tree </a>
+<br>
+<a href="Yellow willow.html">  Yellow Willow  </a>
+
 
 
 
@@ -186,6 +191,10 @@
 <a href="Tea plant.html">  Tea plant  </a>
 <br>
 <a href="Yarrow.html">  Yarrow  </a>
+<br>
+<a href="Blackberry (himalayan and thornless).html">  Blackberry (Himalayan and Thornless)  </a>
+<br>
+<a href="Nettle.html">  Nettle  </a>
 
 
 </div>
