--- a/Oregon grape.html
+++ b/Oregon grape.html
@@ -87,11 +87,11 @@
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
-        <div id="orginsinfo" class="infoblock" style="display:none">
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
+        <div id="originsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origin </h2>
 
           <p class="textblock"> Pacific Northwest of North America </p>        </div>
 <!-- End of orgins -->
