--- a/Quince.html
+++ b/Quince.html
@@ -39,15 +39,15 @@
         <h2> Care & Maitnence </h2>
 
         <p class="textblock">
-        February, March, April, August, September, October:
+        When tree goes into dormancy:
         <br>
-        Prune and mulch.
+        Prune.
         <br><br>
-        November, December, January:
+        In Spring:
         <br>
-        Need-be tree removal
-        <br><br>
-        <i> Repeat </i>
+        Mulch.
+        <br>
+        <i> Repeat as the seasons return. </i>
          </p>
 
 
