--- a/Raspberry.html
+++ b/Raspberry.html
@@ -73,7 +73,7 @@ They like to spread so transplant when you want some space.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Berries 4 food <3 </p>        </div>
+          <p class="textblock"> Berries 4 food 🧺 <3 </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
