dither holes fixed

--- a/Phormium tenax.html
+++ b/Phormium tenax.html
@@ -127,7 +127,7 @@ and baskets.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Phormium tenax  </h1>
+          <h1> New Zealand Flax or Harakeke &nbsp; <i>Phormium tenax</i>  </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
