--- a/Weld.html
+++ b/Weld.html
@@ -38,7 +38,13 @@
 
 <h2> Care & Maintenance </h2>
 
-<p class="textblock"> info on the care and maintnece of weld. </p>
+<p class="textblock">
+
+Febuary, March, April and May:<br>
+Start to seed or dirrectly to sow (bianually).
+
+
+ </p>
 
 
         </div>
